Fixed inconcistent spacing

--- a/waters-aem-frontend/src/styles/navigation.scss
+++ b/waters-aem-frontend/src/styles/navigation.scss
@@ -63,7 +63,7 @@ nav.cmp-navigation {
                content: '';
                margin-top: -48px;
                width: $space-xl + 0.3em;
-               position: relative;
+               position: absolute;
                top: -70%;
                left: 100%;
                float: right;
